--- a/conf/nginx/InvoicePlane.conf
+++ b/conf/nginx/InvoicePlane.conf
@@ -20,7 +20,7 @@ server {
   location ~ \.php$ {
     try_files $uri =404;
     fastcgi_split_path_info ^(.+\.php)(/.+)$;
-    fastcgi_pass php-fpm:9000;
+    fastcgi_pass invoiceplane-php-fpm:9000;
     fastcgi_index index.php;
     fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     include fastcgi_params;
