replace `INVOICE_PLANE_` suffix from variables with `INVOICEPLANE_`

--- a/assets/runtime/config/nginx/InvoicePlane.conf
+++ b/assets/runtime/config/nginx/InvoicePlane.conf
@@ -1,8 +1,8 @@
 server {
   listen 80;
-  server_name {{INVOICE_PLANE_FQDN}};
+  server_name {{INVOICEPLANE_FQDN}};
 
-  root {{INVOICE_PLANE_INSTALL_DIR}};
+  root {{INVOICEPLANE_INSTALL_DIR}};
   index index.php;
   autoindex off;
 
