added `INVOICEPLANE_PHP_FPM_HOST` and `INVOICEPLANE_PHP_FPM_PORT` parameters to configure the php-fpm connection
Automatically detected if a container with alias `php-fpm` is linked

--- a/assets/runtime/config/nginx/InvoicePlane.conf
+++ b/assets/runtime/config/nginx/InvoicePlane.conf
@@ -20,7 +20,7 @@ server {
   location ~ \.php$ {
     try_files $uri =404;
     fastcgi_split_path_info ^(.+\.php)(/.+)$;
-    fastcgi_pass invoiceplane-php-fpm:9000;
+    fastcgi_pass {{INVOICEPLANE_PHP_FPM_HOST}}:{{INVOICEPLANE_PHP_FPM_PORT}};
     fastcgi_index index.php;
     fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     include fastcgi_params;
