--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 mysql:
+  restart: always
   image: sameersbn/mysql:latest
   environment:
     - DB_USER=invoiceplane
@@ -8,6 +9,7 @@ mysql:
     - /srv/docker/invoiceplane/mysql:/var/lib/mysql
 
 invoicePlane:
+  restart: always
   image: sameersbn/invoiceplane:1.4.4
   command: app:invoiceplane
   environment:
@@ -22,6 +24,7 @@ invoicePlane:
     - /srv/docker/invoiceplane/invoiceplane:/var/lib/invoiceplane
 
 nginx:
+  restart: always
   image: sameersbn/invoiceplane:1.4.4
   command: app:nginx
   links:
