--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,10 @@ invoicePlane:
   image: sameersbn/invoiceplane:1.4.4
   command: app:invoiceplane
   environment:
-    - INVOICEPLANE_FQDN=invoice.example.com
+    - TZ=Asia/Kolkata
+
     - INVOICEPLANE_TIMEZONE=Asia/Kolkata
+    - INVOICEPLANE_FQDN=invoice.example.com
 
     - INVOICEPLANE_PHP_FPM_HOST=
     - INVOICEPLANE_PHP_FPM_PORT=
