--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,9 +19,6 @@ invoicePlane:
     - INVOICEPLANE_TIMEZONE=Asia/Kolkata
     - INVOICEPLANE_FQDN=invoice.example.com
 
-    - INVOICEPLANE_PHP_FPM_HOST=
-    - INVOICEPLANE_PHP_FPM_PORT=
-
     - INVOICEPLANE_BACKUPS_EXPIRY=0
   links:
     - mysql:mysql
@@ -32,6 +29,9 @@ nginx:
   restart: always
   image: sameersbn/invoiceplane:1.4.4
   command: app:nginx
+  environment:
+    - INVOICEPLANE_PHP_FPM_HOST=
+    - INVOICEPLANE_PHP_FPM_PORT=
   links:
     - invoicePlane:php-fpm
   ports:
