configure `fastcgi_param HTTPS` nginx param using the `INVOICEPLANE_URL` param

--- a/assets/runtime/config/nginx/InvoicePlane.conf
+++ b/assets/runtime/config/nginx/InvoicePlane.conf
@@ -22,6 +22,7 @@ server {
     fastcgi_split_path_info ^(.+\.php)(/.+)$;
     fastcgi_pass {{INVOICEPLANE_PHP_FPM_HOST}}:{{INVOICEPLANE_PHP_FPM_PORT}};
     fastcgi_index index.php;
+    fastcgi_param HTTPS {{INVOICEPLANE_HTTPS}};
     fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     include fastcgi_params;
   }
