rebased nginx virtualhost config from the ownCloud template

--- a/assets/runtime/config/nginx/InvoicePlane.conf
+++ b/assets/runtime/config/nginx/InvoicePlane.conf
@@ -3,12 +3,12 @@ server {
   server_name {{INVOICEPLANE_FQDN}};
 
   root {{INVOICEPLANE_INSTALL_DIR}};
+
+  client_max_body_size 0;
+  fastcgi_buffers 64 4K;
+
   index index.php;
   autoindex off;
-
-  location / {
-    try_files $uri $uri/ /index.php?q=$uri&$args;
-  }
 
   error_page 404 /404.html;
 
@@ -17,13 +17,27 @@ server {
     root /usr/share/nginx/html;
   }
 
-  location ~ \.php$ {
-    try_files $uri =404;
+  location / {
+    try_files $uri $uri/ /index.php;
+  }
+
+  location ~ \.php(?:$|/) {
     fastcgi_split_path_info ^(.+\.php)(/.+)$;
-    fastcgi_pass {{INVOICEPLANE_PHP_FPM_HOST}}:{{INVOICEPLANE_PHP_FPM_PORT}};
-    fastcgi_index index.php;
-    fastcgi_param HTTPS {{INVOICEPLANE_HTTPS}};
-    fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     include fastcgi_params;
+    fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    fastcgi_param PATH_INFO $fastcgi_path_info;
+    fastcgi_param HTTPS {{INVOICEPLANE_HTTPS}};
+    fastcgi_pass {{INVOICEPLANE_PHP_FPM_HOST}}:{{INVOICEPLANE_PHP_FPM_PORT}};
+    fastcgi_intercept_errors on;
+  }
+
+  # Adding the cache control header for js and css files
+  location ~* \.(?:css|js)$ {
+    add_header Cache-Control "public, max-age=7200";
+    access_log off;
+  }
+
+  location ~* \.(?:jpg|jpeg|gif|bmp|ico|png|swf)$ {
+    access_log off;
   }
 }
