--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ mysql:
 
 invoicePlane:
   restart: always
-  image: sameersbn/invoiceplane:1.4.4
+  image: sameersbn/invoiceplane:1.4.4-1
   command: app:invoiceplane
   environment:
     - DEBUG=false
@@ -25,7 +25,7 @@ invoicePlane:
 
 nginx:
   restart: always
-  image: sameersbn/invoiceplane:1.4.4
+  image: sameersbn/invoiceplane:1.4.4-1
   command: app:nginx
   environment:
     - INVOICEPLANE_PHP_FPM_HOST=
