--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '2'
 services:
   mysql:
     restart: always
-    image: sameersbn/mysql:latest
+    image: sameersbn/mysql:5.7.22-1
     environment:
     - DB_USER=invoiceplane
     - DB_PASS=password
